# f1-telemetry-client

./: Cargo.toml  README.md
src/: f1_2020.rs  lib.rs  packet.rs
src/f1_2020/: car.rs  car_setup.rs  car_status.rs  car_telemetry.rs  driver.rs  event.rs  final_classification.rs  header.rs  lap.rs  lobby_info.rs  motion.rs  nationality.rs  packet.rs  participants.rs  session.rs  team.rs
