[package]
name = "f1-telemetry-client"
version = "0.1.1"
authors = ["Aldi Perdana <aldidana@gmail.com>"]
edition = "2018"
description = "Telemetry client for F1 game by Codemasters"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
byteorder_async = { version="1.2.0", features=["futures_async"] }
derivative = "2.1.1"